; ModuleID = '/home/carl/AnghaBench/git/extr_diffcore-pickaxe.c_contains.c'
source_filename = "/home/carl/AnghaBench/git/extr_diffcore-pickaxe.c_contains.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i8* }
%struct.TYPE_5__ = type { i64, i64 }
%struct.kwsmatch = type { i64* }

@REG_NOTBOL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i32*, i32)* @contains to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @contains(%struct.TYPE_6__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca %struct.TYPE_5__, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.kwsmatch, align 8
  %13 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %14 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %8, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %9, align 8
  store i32 0, i32* %7, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = icmp ne i32* %20, null
  br i1 %21, label %22, label %75

22:                                               ; preds = %3
  store i32 0, i32* %11, align 4
  br label %23

23:                                               ; preds = %71, %22
  %24 = load i64, i64* %8, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %39

26:                                               ; preds = %23
  %27 = load i8*, i8** %9, align 8
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %39

31:                                               ; preds = %26
  %32 = load i32*, i32** %5, align 8
  %33 = load i8*, i8** %9, align 8
  %34 = load i64, i64* %8, align 8
  %35 = load i32, i32* %11, align 4
  %36 = call i32 @regexec_buf(i32* %32, i8* %33, i64 %34, i32 1, %struct.TYPE_5__* %10, i32 %35)
  %37 = icmp ne i32 %36, 0
  %38 = xor i1 %37, true
  br label %39

39:                                               ; preds = %31, %26, %23
  %40 = phi i1 [ false, %26 ], [ false, %23 ], [ %38, %31 ]
  br i1 %40, label %41, label %74

41:                                               ; preds = %39
  %42 = load i32, i32* @REG_NOTBOL, align 4
  %43 = load i32, i32* %11, align 4
  %44 = or i32 %43, %42
  store i32 %44, i32* %11, align 4
  %45 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load i8*, i8** %9, align 8
  %48 = getelementptr inbounds i8, i8* %47, i64 %46
  store i8* %48, i8** %9, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = load i64, i64* %8, align 8
  %52 = sub i64 %51, %50
  store i64 %52, i64* %8, align 8
  %53 = load i64, i64* %8, align 8
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %71

55:                                               ; preds = %41
  %56 = load i8*, i8** %9, align 8
  %57 = load i8, i8* %56, align 1
  %58 = sext i8 %57 to i32
  %59 = icmp ne i32 %58, 0
  br i1 %59, label %60, label %71

60:                                               ; preds = %55
  %61 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %62 = load i64, i64* %61, align 8
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 0
  %64 = load i64, i64* %63, align 8
  %65 = icmp eq i64 %62, %64
  br i1 %65, label %66, label %71

66:                                               ; preds = %60
  %67 = load i8*, i8** %9, align 8
  %68 = getelementptr inbounds i8, i8* %67, i32 1
  store i8* %68, i8** %9, align 8
  %69 = load i64, i64* %8, align 8
  %70 = add i64 %69, -1
  store i64 %70, i64* %8, align 8
  br label %71

71:                                               ; preds = %66, %60, %55, %41
  %72 = load i32, i32* %7, align 4
  %73 = add i32 %72, 1
  store i32 %73, i32* %7, align 4
  br label %23

74:                                               ; preds = %39
  br label %107

75:                                               ; preds = %3
  br label %76

76:                                               ; preds = %87, %75
  %77 = load i64, i64* %8, align 8
  %78 = icmp ne i64 %77, 0
  br i1 %78, label %79, label %106

79:                                               ; preds = %76
  %80 = load i32, i32* %6, align 4
  %81 = load i8*, i8** %9, align 8
  %82 = load i64, i64* %8, align 8
  %83 = call i64 @kwsexec(i32 %80, i8* %81, i64 %82, %struct.kwsmatch* %12)
  store i64 %83, i64* %13, align 8
  %84 = load i64, i64* %13, align 8
  %85 = icmp eq i64 %84, -1
  br i1 %85, label %86, label %87

86:                                               ; preds = %79
  br label %106

87:                                               ; preds = %79
  %88 = load i64, i64* %13, align 8
  %89 = getelementptr inbounds %struct.kwsmatch, %struct.kwsmatch* %12, i32 0, i32 0
  %90 = load i64*, i64** %89, align 8
  %91 = getelementptr inbounds i64, i64* %90, i64 0
  %92 = load i64, i64* %91, align 8
  %93 = add i64 %88, %92
  %94 = load i64, i64* %8, align 8
  %95 = sub i64 %94, %93
  store i64 %95, i64* %8, align 8
  %96 = load i64, i64* %13, align 8
  %97 = getelementptr inbounds %struct.kwsmatch, %struct.kwsmatch* %12, i32 0, i32 0
  %98 = load i64*, i64** %97, align 8
  %99 = getelementptr inbounds i64, i64* %98, i64 0
  %100 = load i64, i64* %99, align 8
  %101 = add i64 %96, %100
  %102 = load i8*, i8** %9, align 8
  %103 = getelementptr inbounds i8, i8* %102, i64 %101
  store i8* %103, i8** %9, align 8
  %104 = load i32, i32* %7, align 4
  %105 = add i32 %104, 1
  store i32 %105, i32* %7, align 4
  br label %76

106:                                              ; preds = %86, %76
  br label %107

107:                                              ; preds = %106, %74
  %108 = load i32, i32* %7, align 4
  ret i32 %108
}

declare dso_local i32 @regexec_buf(i32*, i8*, i64, i32, %struct.TYPE_5__*, i32) #1

declare dso_local i64 @kwsexec(i32, i8*, i64, %struct.kwsmatch*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
